fix: render sparkline point for single price